; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_fmemopen.c_fmemopen_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/stdio/extr_fmemopen.c_fmemopen_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fmemopen_cookie = type { %struct.fmemopen_cookie*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @fmemopen_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fmemopen_close(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.fmemopen_cookie*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.fmemopen_cookie*
  store %struct.fmemopen_cookie* %5, %struct.fmemopen_cookie** %3, align 8
  %6 = load %struct.fmemopen_cookie*, %struct.fmemopen_cookie** %3, align 8
  %7 = getelementptr inbounds %struct.fmemopen_cookie, %struct.fmemopen_cookie* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.fmemopen_cookie*, %struct.fmemopen_cookie** %3, align 8
  %12 = getelementptr inbounds %struct.fmemopen_cookie, %struct.fmemopen_cookie* %11, i32 0, i32 0
  %13 = load %struct.fmemopen_cookie*, %struct.fmemopen_cookie** %12, align 8
  %14 = call i32 @free(%struct.fmemopen_cookie* %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.fmemopen_cookie*, %struct.fmemopen_cookie** %3, align 8
  %17 = call i32 @free(%struct.fmemopen_cookie* %16)
  ret i32 0
}

declare dso_local i32 @free(%struct.fmemopen_cookie*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
